# Desurium

./: CMakeLists.txt  build_desura_vis.bat  nmake_settings_xp.bat
build_out/data/language/: english.xml
cmake/modules/: BuildCEF.cmake  macros.cmake
src/: CMakeLists.txt
src/branding_desurium/: CMakeLists.txt
src/common/: Common.h
src/common/tool_pipe/: IPCToolMain.cpp
src/executable/bootloader_lin/code/: DesuraMain.cpp
src/executable/bootloader_win/: CMakeLists.txt
src/executable/bootloader_win/code/: DesuraMain.cpp
src/executable/dumpgen_win/: CMakeLists.txt
src/executable/dumpgen_win/RES/: dumpgen.rc
src/executable/dumpgen_win/code/: CrashAlert.cpp  CrashAlert.h  main.cpp  processDump.cpp  stdafx.cpp
src/executable/service_win/code/: ServiceMain.cpp
src/executable/toolhelper/: CMakeLists.txt
src/executable/toolhelper/code/: main.cpp
src/executable/utilhelper/: CMakeLists.txt
src/executable/utilhelper/code/: main.cpp
src/include/: MainAppI.h
src/include/umcf/: UMcf.h
src/include/usercore/: UserCoreI.h
src/include/util/: UtilMisc.h  UtilWeb.h
src/include/wx_controls/: gcCustomFrame.h
src/shared/servicecore/code/: McfInit.cpp  UnInstallRegKey.cpp  UpdateProcess.cpp  UpdateShortcuts.cpp
src/shared/uicore/: CMakeLists.txt
src/shared/uicore/code/: AboutPageMain.cpp  CDKInfo.cpp  CDKProgress.cpp  CefIPCPipeClient.cpp  Console.cpp  CreateForm.cpp  CreateForm.h  DesuraControl.cpp  ICheckFinishPage.cpp  MainApp.cpp  (+21 more)
src/shared/unittests/: CMakeLists.txt
src/shared/utilcore/: CMakeLists.txt
tools/windows/: SymbolUpload.exe.config
(+28 files in other folders)
